--- a/static/styles.css
+++ b/static/styles.css
@@ -144,14 +144,13 @@ form {
   display: inline-block;
 }
 .blank-input {
-  width: 1.5em;
-  min-width: 1.2em;
+  width: 1em;
+  min-width: 1em;
   max-width: 2em;
-  height: 1.8em;
-  font-size: 1.12em;
+  height: 1.5em;
+  font-size: 1em;
   font-family: 'Fira Mono', 'Consolas', 'Menlo', 'Courier New', monospace;
   text-align: center;
-  margin: 0 0.15em;
   border: 1.2px solid #b3cfff;
   border-radius: 5px;
   background: #f6fbff;
@@ -159,14 +158,34 @@ form {
   box-shadow: 0 2px 5px 0 #c7e2fa44;
   transition: border-color 0.2s, box-shadow 0.2s;
   outline: none;
-  vertical-align: middle;
 }
 .blank-input:focus {
   border-color: #256ddb;
   background: #eaf3fe;
   box-shadow: 0 0 0 2px #b3cfff88;
 }
-
+.blank-input.correct {
+  border-color: #30c96b;
+  background: #eafbe6;
+}
+.blank-input.incorrect {
+  border-color: #ef3737;
+  background: #ffeaea;
+}
+.cloze-blank-group.correct input { border-color: #30c96b !important; background: #eafbe6 !important;}
+.cloze-blank-group.incorrect input { border-color: #ef3737 !important; background: #ffeaea !important;}
+.cloze-blank-group.correct { background: #eafbe6; border-radius: 6px; }
+.cloze-blank-group.incorrect { background: #ffeaea; border-radius: 6px; }
+.correct-answer {
+  color: #888;
+  font-size: 0.98em;
+  margin-left: 0.3em;
+  font-style: italic;
+}
+.score {
+  color: #2462d2;
+  font-size: 1.15em;
+}
 
 @media (max-width: 700px) {
   .container { padding: 18px 7px 10px 7px; }
