--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,7 @@
 </head>
 <body>
   <div class="container">
+    <a href="{{ url_for('config') }}" class="config-link" title="Configure settings">⚙️ Configure</a>
     <h1>DeepSeek Cloze Test Generator</h1>
     <form method="post" autocomplete="off">
       <div class="input-row">
